--- a/data/css/site.css
+++ b/data/css/site.css
@@ -20,13 +20,11 @@ header
 section
 {
     margin-right: 8px;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing : border-box;
-    box-sizing : border-box;
     overflow:hidden;
     background: #fffe99;
     padding:25px;
 }
+
 @media (min-width: 500px){
     section
     {
@@ -39,10 +37,6 @@ section
     }
 }
 @media (max-width: 799px){
-    .high_res
-    {
-	display:none;
-    }
     .mobile{
 	margin-top: 25px;
 	margin-bottom: 25px;
@@ -68,6 +62,19 @@ section
     }
 }
 @media (min-width : 800px){
+        .wraper
+    {
+	display: table;
+	width: 100%;
+	height: 200px;
+
+    }
+    
+    .wrapper_row
+    {
+	display: table-row;
+	height: 100%;
+    }
     .mobile{
 	display:none;
     }
@@ -89,16 +96,17 @@ section
 	display:inline-block;
 	margin-top: 25px;
 	margin-left: 8px;
-	width: 150px;
+	width: 200px;
 	vertical-align:top;
+	height: 100%;
     }
     section
     {
 	margin-left:0px;
 	display: inline-block;
-	width: calc(100% - 180px);
+	width: calc(100% - 350px);
 	vertical-align:top;
-	display: inline-block;
+	height: calc(100% + 25px);
     }
     .menu_box
     {
