--- a/data/css/site.css
+++ b/data/css/site.css
@@ -1,6 +1,6 @@
 body
 {
-    background-color: #f1f1f1;
+    background-color: #F5F5DC;
     padding:0px;
     margin: 0px;
 }
@@ -15,6 +15,7 @@ header
 {
     font-size: 5em;
     font-family: "French Script MT";
+    text-shadow: 8px 8px 12px #aaa;
 }
 
 section
@@ -22,6 +23,7 @@ section
     margin-right: 8px;
     background: #fffe99;
     padding:25px;
+    max-width: auto;
 }
 
 @media (min-width: 500px){
@@ -97,7 +99,7 @@ section
     }
     .menu_box
     {
-	background-color: #FFFFFF;
+	background-color: #FFFDDF;
     }
 }
 
@@ -143,4 +145,11 @@ header:after
     content: " "; 
     display: table;
     clear: both;
+}
+
+td {
+    padding: 5px;
+}
+th {
+    padding: 5px;
 }
