Ajout d'une fonction montrer cacher Ajax

--- a/data/css/site.css
+++ b/data/css/site.css
@@ -17,70 +17,14 @@ header
     font-family: "French Script MT";
     text-shadow: 8px 8px 12px #aaa;
 }
-
-section
-{
-    background: #fffe99;
-    padding:25px;
-    max-width: auto;
-}
-
 .wraper
 {
-    display: table;
     width: 100%;
     height: 200px;
-
 }
 
-<<<<<<< HEAD
-    }
-    
-    .wrapper_row
-    {
-	display: table-row;
-	height: 100%;
-    }
-    #titre
-    {
-	display:inline-block;
-	float:left;
-	margin: 25px 2%;
-    }
-    #header_droit
-    {
-	display: inline-block;
-	float:right;
-	margin: 25px 2%;
-	vertical-align:bottom;
-    }
-    nav
-    {
-	display:inline-block;
-	margin-top: 25px;
-	margin-left: 8px;
-	width: 210px;
-	vertical-align:top;
-	height: 100%;
-	margin-right:-10px;
-    }
-    section
-    {
-	margin-left:0px;
-	display: inline-block;
-	width: calc(100% - 240px);
-	vertical-align:top;
-	height: calc(100% + 25px);
-	position: relative;
-    }
-    .menu_box
-    {
-	background-color: #FFFDDF;
-    }
-=======
 .wrapper_row
 {
-    display: table-row;
     height: 100%;
 }
 #titre
@@ -98,28 +42,33 @@ section
 }
 nav
 {
-    display:inline-block;
+    float: left;
     margin-top: 25px;
     margin-left: 8px;
     width: 210px;
-    vertical-align:top;
     height: 100%;
     margin-right:-10px;
 }
 section
 {
+    background: #fffe99;
+    padding:25px;
     margin-right: 8px;
-    margin-left:0px;
-    display: inline-block;
+    margin-left:200px;
     width: calc(100% - 240px);
     vertical-align:top;
     min-height: calc(100% + 25px);
     position: relative;
+    border-style: solid;
+    border-width: 0px 47px 5px 0px;
+    -moz-border-image: url(../img/anneau.png) 0 47 5 0 repeat round;
+    -webkit-border-image: url(../img/anneau.png) 0 47 5 0 repeat round;
+    -o-border-image: url(../img/anneau.png) 0 47 5 0 repeat round;
+    border-image: url(../img/anneau.png) 0 47 5 0 fill repeat round;
 }
 .menu_box
 {
     background-color: #FFFFFF;
->>>>>>> fa37788037c43244cd36756a6186dbac030d5cef
 }
 
 .chapitre
