--- a/data/css/site.css
+++ b/data/css/site.css
@@ -19,12 +19,14 @@ header
 }
 .wraper
 {
+    display: table;
     width: 100%;
-    height: 200px;
+    height: 100%;
 }
 
 .wrapper_row
 {
+    display: table-row;
     height: 100%;
 }
 #titre
@@ -42,22 +44,22 @@ header
 }
 nav
 {
-    float: left;
-    margin-top: 25px;
-    margin-left: 8px;
-    width: 210px;
+    display: inline-block;
+    padding-top: 25px;
+    padding-left: 8px;
+    padding-bottom: 25px;
+    width: 200px;
     height: 100%;
-    margin-right:-10px;
 }
 section
 {
+    display: inline-block;
     background: #fffe99;
     padding:25px;
-    margin-right: 8px;
-    margin-left:200px;
-    width: calc(100% - 240px);
+    margin-left: -8px;
+    width: calc(100% - 250px);
+    min-height: calc(100% + 50px);
     vertical-align:top;
-    min-height: calc(100% + 25px);
     position: relative;
     border-style: solid;
     border-width: 0px 47px 5px 0px;
