--- a/data/css/site.css
+++ b/data/css/site.css
@@ -12,6 +12,9 @@ header
     background-color: #f6f4bd;
     margin-bottom: 20px;
     width: 100%;
+    -webkit-box-shadow: 0px 5px 5px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    0px 5px 5px 0px rgba(50, 50, 50, 0.75);
+    box-shadow:         0px 5px 5px 0px rgba(50, 50, 50, 0.75);
 }
 #titre
 {
@@ -108,7 +111,6 @@ th {
 }
 
 @media screen and (min-width: 992px){
-
     .wraper
     {
 	display: table;
