--- a/data/css/site.css
+++ b/data/css/site.css
@@ -80,13 +80,18 @@ th {
     padding: 5px;
 }
 
+.outils
+{
+    display: none;
+}
+
 @media screen and (max-width: 767px) {
 
     #titre{
 	font-size: 2em;
     }
 
-    section{
+    #container{
 	width: 100%;
     }
 
@@ -103,33 +108,19 @@ th {
 	float: none;
 	width: auto;
     }
-    
-    .outils
-    {
-	display: none;
-    }
 }
-
 @media screen and (min-width: 992px){
     .wraper
     {
 	display: table;
 	width: 100%;
-	height: 100%;
+	height: 300px;
     }
 
     .wrapper_row
     {
-	display: table-row;
+	display: table-row;	
 	height: 100%;
-    }
-    section{
-	display: inline-block;
-	margin-left: -8px;
-	width: calc(100% - 210px);
-	min-height: calc(100% + 50px);
-	vertical-align:top;
-	position: relative;
     }
     nav
     {
@@ -139,13 +130,36 @@ th {
 	padding-bottom: 25px;
 	width: 200px;
 	height: 100%;
+	z-index: -10;
+    }
+    #container
+    {
+	display: inline-block;
+	width: 100%;
+	padding-left: 200px;
+	vertical-align:top;
+	position: absolute;
+	left: 0;
+    }
+    a{
+	z-index: 3;
+    }
+
+    .outils
+    {
+	display: span;
+    }
+
+    section{
+	min-height: 350px;
+
     }
 }
 
 @media screen and (min-width : 768px){
 
     section{
-	border-style: solid;
+	border-color: #fff;
 	border-width: 0px 47px 5px 0px;
 	-moz-border-image: url(../img/anneau.png) 0 47 5 0 repeat round;
 	-webkit-border-image: url(../img/anneau.png) 0 47 5 0 repeat round;
