--- a/data/css/site.css
+++ b/data/css/site.css
@@ -167,7 +167,8 @@ th {
 @media screen and (min-width : 768px){
 
     section{
-	border-color: #fff;
+	border-style: solid;
+	border-color: #fffe99;
 	border-width: 0px 47px 5px 0px;
 	-moz-border-image: url(../img/anneau.png) 0 47 5 0 repeat round;
 	-webkit-border-image: url(../img/anneau.png) 0 47 5 0 repeat round;
